force-app/main/default/objects/Cabang__c/Cabang__c.object-meta.xml
<CustomObject>
    <label>Cabang</label>
    <nameField>
        <label>Kode Cabang</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cabangs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>