force-app/main/default/objects/Cabang__c/fields/Area_Group__c.field-meta.xml
<CustomField>
    <fullName>Area_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Group</label>
    <referenceTo>Area_Group__c</referenceTo>
    <relationshipLabel>Cabangs</relationshipLabel>
    <relationshipName>Cabangs</relationshipName>
    <type>Lookup</type>
</CustomField>