force-app/main/default/objects/Cabang__c/fields/BM__c.field-meta.xml
<CustomField>
    <fullName>BM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] BM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BM</relationshipName>
    <type>Lookup</type>
</CustomField>