force-app/main/default/objects/Cabang__c/fields/CA_Cabang__c.field-meta.xml
<CustomField>
    <fullName>CA_Cabang__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] CA Cabang</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CA_Cabang</relationshipName>
    <type>Lookup</type>
</CustomField>