force-app/main/default/objects/Cabang__c/fields/LAO__c.field-meta.xml
<CustomField>
    <fullName>LAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] LAO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LAO</relationshipName>
    <type>Lookup</type>
</CustomField>