force-app/main/default/objects/Cabang__c/fields/Quadrant__c.field-meta.xml
<CustomField>
    <fullName>Quadrant__c</fullName>
    <label>Quadrant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quadrant_Cabang</valueSetName>
    </valueSet>
</CustomField>