force-app/main/default/objects/Cabang__c/fields/SPV_AO__c.field-meta.xml
<CustomField>
    <fullName>SPV_AO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] SPV AO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cabangs</relationshipName>
    <type>Lookup</type>
</CustomField>