force-app/main/default/objects/Cabang__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nama_Cabang__c</columns>
    <columns>Quadrant__c</columns>
    <columns>Area_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>